# moltbook-coordination-persistence

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  raw  restricted
.github/: pull_request_template.md
.orchestrator/: AGENTS.md  README.md  workstreams.md
analysis/: AGENTS.md  _derived_builders.py  build_archive_metadata_audit.py  build_control_panel_summary.py  build_moltnet_control_panel_summary.py  build_moltnet_parent_units.py  build_parent_units.py  build_periodicity_input.py  build_thread_geometry.py  flagship_control_panel_margins.py  hf_archive_curate.py  hf_archive_schema_discovery.py  hf_archive_validate.py  incidence_horizon_standardization.py  moltbook_api_collect.py  moltbook_api_curate.py  moltbook_api_validate.py
contracts/: AGENTS.md  CHANGELOG.md  README.md  assumptions.md  data_dictionary.md  framework.json  project.yaml
derived/: README.md
docs/: data_acquisition_plan.md  data_acquisition_plan.tagged_source.md  decisions.md  migration_manifest.md  runbook_swarm.md  runbook_swarm_automation.md  stage3_theory_framework_packet.cleaned.md  swarm_deployment_plan.md
manifests/: README.md  schema_crosswalk.yaml  simulamet_firstweek_freeze_manifest.json  simulamet_manifest.yaml  simulamet_qc_benchmarks.json
paper/: main.tex  references.bib
qc/: README.md  field_validation_simulamet.csv  missingness_simulamet.csv  simulamet_dedup_conflicts.csv
reports/: AGENTS.md
scripts/: AGENTS.md  download_moltbook_observatory_archive.py  quality_gates.py  run_moltbook_live_campaign.py  swarm.py  sweep_tasks.py
(+66 files in other folders)
