[project]
name = "coordination-persistence-flagship"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "datasets>=3.0.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=17.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  ".venv",
  "raw",
  "frozen",
  "restricted",
  ".orchestrator/runtime_logs",
  "reports/status/swarm_logs",
  "data_raw",
  "data_curated",
  "data_features",
  "outputs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
